[package]
name = "withdrawal_index_reporter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.86"
serde = { version = "^1.0.204", features = ["derive"] }
serde_json = "^1.0.120"
reqwest = { version = "^0.12.5", features = ["json", "blocking"] }
prometheus = { version = "0.13.4", features = ["push"] }
lazy_static = "^1.5.0"
log = "^0.4.22"
systemd-journal-logger = "^2.1.1"
